test(Step3-Wave3): UserService 11测+CheckpointService 9测